generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model TaiKhoan {
  id                BigInt    @id @default(autoincrement())
  email             String    @unique @db.VarChar(255)
  matKhau           String    @db.VarChar(255)
  refreshToken      String?
  vaiTro            String?   @db.VarChar(50)
  trangThaiTaiKhoan Int?      @default(1)
  ngayTao           DateTime? @default(now())
  ngayCapNhat       DateTime? @updatedAt
  gioiTinh          Int?
  ngaySinh          DateTime? @db.Date
  diaChi            String?   @db.VarChar(255)
  anhDaiDien        String?   @db.VarChar(255)
  bacSi             BacSi?
  benhNhan          BenhNhan?

  @@map("TaiKhoan")
}

model ChuyenKhoa {
  id             BigInt  @id @default(autoincrement())
  tenChuyenKhoa  String  @db.VarChar(120)
  anhChuyenKhoa  String? @db.VarChar(255)
  moTaChuyenKhoa String?
  thoiLuongKham  Int     @default(20)
  icon           String? @db.VarChar(50)
  bacSiList      BacSi[]

  @@map("ChuyenKhoa")
}

model BacSi {
  id            BigInt             @id @default(autoincrement())
  hocViChucDanh String?            @db.VarChar(120)
  tenBacSi      String             @db.VarChar(120)
  moTaNgan      String?            @db.VarChar(255)
  moTaChiTiet   String?
  giaKham       Decimal?           @db.Decimal(10, 2)
  taiKhoanId    BigInt?            @unique
  chuyenKhoaId  BigInt?
  chuyenKhoa    ChuyenKhoa?        @relation(fields: [chuyenKhoaId], references: [id])
  taiKhoan      TaiKhoan?          @relation(fields: [taiKhoanId], references: [id])
  datLichs      DatLich[]
  lichLamViec   LichLamViecBacSi[]

  @@map("BacSi")
}

model BenhNhan {
  id          BigInt    @id @default(autoincrement())
  hoTen       String    @db.VarChar(120)
  soDienThoai String?   @db.VarChar(20)
  emailLienHe String?   @db.VarChar(255)
  taiKhoanId  BigInt?   @unique
  taiKhoan    TaiKhoan? @relation(fields: [taiKhoanId], references: [id])
  datLichs    DatLich[]

  @@map("BenhNhan")
}

model KhungGio {
  id          BigInt             @id @default(autoincrement())
  gioBatDau   DateTime           @db.Time(6)
  gioKetThuc  DateTime           @db.Time(6)
  lichLamViec LichLamViecBacSi[]

  @@map("KhungGio")
}

model LichLamViecBacSi {
  id                BigInt    @id @default(autoincrement())
  ngayLamViec       DateTime  @db.Date
  soBenhNhanHienTai Int?      @default(0)
  soBenhNhanToiDa   Int?      @default(10)
  sanSang           Int?      @default(1)
  bacSiId           BigInt?
  khungGioId        BigInt?
  datLichs          DatLich[]
  bacSi             BacSi?    @relation(fields: [bacSiId], references: [id])
  khungGio          KhungGio? @relation(fields: [khungGioId], references: [id])

  @@map("LichLamViecBacSi")
}

model HinhThucThanhToan {
  id          BigInt    @id @default(autoincrement())
  tenHinhThuc String    @db.VarChar(120)
  maLoai      String    @default("OFFLINE") @db.VarChar(20)
  datLichs    DatLich[]

  @@map("HinhThucThanhToan")
}

model DatLich {
  id                  BigInt             @id @default(autoincrement())
  ngayDat             DateTime           @db.Date
  gioBatDau           DateTime           @db.Time(6)
  gioKetThuc          DateTime           @db.Time(6)
  lyDoKham            String?            @db.VarChar(255)
  giaKham             Decimal?           @db.Decimal(10, 2)
  trangThai           Int?               @default(0)
  trangThaiThanhToan  Int?               @default(0)
  bacSiId             BigInt?
  benhNhanId          BigInt?
  hinhThucThanhToanId BigInt?
  lichLamViecId       BigInt?
  bacSi               BacSi?             @relation(fields: [bacSiId], references: [id])
  benhNhan            BenhNhan?          @relation(fields: [benhNhanId], references: [id])
  hinhThucThanhToan   HinhThucThanhToan? @relation(fields: [hinhThucThanhToanId], references: [id])
  lichLamViec         LichLamViecBacSi?  @relation(fields: [lichLamViecId], references: [id])
  donThuoc            DonThuoc?
  giaoDichs           GiaoDich[]

  @@unique([bacSiId, ngayDat, gioBatDau], name: "unique_lich")
  @@map("DatLich")
}

model GiaoDich {
  id               BigInt   @id @default(autoincrement())
  datLichId        BigInt
  loaiGiaoDich     String   @db.VarChar(20) // "PHI_KHAM" | "DON_THUOC"
  soTien           Decimal  @db.Decimal(10, 2)
  maGiaoDichVNP    String?  @db.VarChar(100) // vnp_TransactionNo từ VNPay
  maThamChieu      String?  @db.VarChar(100) // vnp_TxnRef (mã riêng của mình)
  trangThai        Int      @default(0) // 0: Chờ, 1: Thành công, 2: Thất bại
  ngayTao          DateTime @default(now())
  ngayCapNhat      DateTime @updatedAt
  datLich          DatLich  @relation(fields: [datLichId], references: [id])

  @@map("GiaoDich")
}

model DonThuoc {
  id              BigInt            @id @default(autoincrement())
  datLichId       BigInt            @unique
  ngayTao         DateTime?         @default(now())
  chanDoan        String?
  ghiChu          String?
  tongTien        Decimal?          @default(0) @db.Decimal(10, 2)
  chiTietDonThuoc ChiTietDonThuoc[]
  datLich         DatLich           @relation(fields: [datLichId], references: [id])

  @@map("DonThuoc")
}

model ChiTietDonThuoc {
  id         BigInt   @id @default(autoincrement())
  donThuocId BigInt
  tenThuoc   String   @db.VarChar(255)
  soLuong    Int?
  donGia     Decimal? @default(0) @db.Decimal(10, 2)
  lieuDung   String?  @db.VarChar(255)
  ghiChu     String?  @db.VarChar(255)
  donThuoc   DonThuoc @relation(fields: [donThuocId], references: [id], onDelete: Cascade)

  @@map("ChiTietDonThuoc")
}

model CauHoiThuongGap {
  id           BigInt  @id @default(autoincrement())
  cauHoi       String? @db.VarChar(255)
  traLoi       String?
  dangHoatDong Int?    @default(1)

  @@map("CauHoiThuongGap")
}
