@startuml Class_Diagram_Clinic_Domain
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor #FFFFFF
skinparam nodesep 80
skinparam ranksep 80
hide circle

skinparam class {
  BackgroundColor #E3F2FD
  BorderColor #1E88E5
  ArrowColor #1E88E5
  FontColor #0D47A1
  FontName Arial
  FontSize 13
}

' Note:
' - dau ? nghia la nullable trong schema.prisma
' - method the hien nghiep vu o muc phan tich, code thuc te nam o controller/service

class TaiKhoan {
  - id : bigint
  - email : string
  - matKhau : string
  - refreshToken : string?
  - vaiTro : string?
  - trangThaiTaiKhoan : int?
  - gioiTinh : int?
  - ngaySinh : date?
  - diaChi : string?
  - anhDaiDien : string?
  - ngayTao : datetime?
  - ngayCapNhat : datetime?
  --
  + dangKy()
  + dangNhap()
  + dangXuat()
  + doiMatKhau()
  + capNhatHoSo()
  + lamMoiToken()
}

class BacSi {
  - id : bigint
  - hocViChucDanh : string?
  - tenBacSi : string
  - moTaNgan : string?
  - moTaChiTiet : text?
  - giaKham : decimal(10,2)?
  - taiKhoanId : bigint?
  - chuyenKhoaId : bigint?
  --
  + capNhatThongTin()
  + xemLichHen()
  + capNhatTrangThaiLichHen()
}

class BenhNhan {
  - id : bigint
  - hoTen : string
  - soDienThoai : string?
  - emailLienHe : string?
  - taiKhoanId : bigint?
  --
  + capNhatHoSo()
  + taoLichHen()
  + huyLichHen()
  + xemLichSuDatLich()
}

class ChuyenKhoa {
  - id : bigint
  - tenChuyenKhoa : string
  - anhChuyenKhoa : string?
  - moTaChuyenKhoa : text?
  - thoiLuongKham : int
  - icon : string?
  --
  + themChuyenKhoa()
  + suaChuyenKhoa()
  + xoaChuyenKhoa()
}

class KhungGio {
  - id : bigint
  - gioBatDau : time
  - gioKetThuc : time
}

class HinhThucThanhToan {
  - id : bigint
  - tenHinhThuc : string
  - maLoai : string
  --
  + themHinhThuc()
  + suaHinhThuc()
  + xoaHinhThuc()
}

class CauHoiThuongGap {
  - id : bigint
  - cauHoi : string?
  - traLoi : text?
  - dangHoatDong : int?
  --
  + themCauHoi()
  + suaCauHoi()
  + xoaCauHoi()
}

class LichLamViecBacSi {
  - id : bigint
  - ngayLamViec : date
  - soBenhNhanHienTai : int?
  - soBenhNhanToiDa : int?
  - sanSang : int?
  - bacSiId : bigint?
  - khungGioId : bigint?
  --
  + taoLichLamViec()
  + capNhatTrangThai()
  + xoaLichLamViec()
}

class DatLich {
  - id : bigint
  - ngayDat : date
  - gioBatDau : time
  - gioKetThuc : time
  - lyDoKham : string?
  - giaKham : decimal(10,2)?
  - trangThai : int?
  - trangThaiThanhToan : int?
  - bacSiId : bigint?
  - benhNhanId : bigint?
  - hinhThucThanhToanId : bigint?
  - lichLamViecId : bigint?
  --
  + taoLichHen()
  + xacNhanLichHen()
  + huyLichHen()
  + hoanThanhLichHen()
  + capNhatTrangThaiThanhToan()
}

class GiaoDich {
  - id : bigint
  - datLichId : bigint
  - loaiGiaoDich : string
  - soTien : decimal(10,2)
  - maGiaoDichVNP : string?
  - maThamChieu : string?
  - trangThai : int
  - ngayTao : datetime
  - ngayCapNhat : datetime
  --
  + taoGiaoDich()
  + capNhatTrangThaiGiaoDich()
}

class DonThuoc {
  - id : bigint
  - datLichId : bigint
  - chanDoan : text?
  - ghiChu : text?
  - tongTien : decimal(10,2)?
  - ngayTao : datetime?
  --
  + taoDonThuoc()
  + capNhatDonThuoc()
}

class ChiTietDonThuoc {
  - id : bigint
  - donThuocId : bigint
  - tenThuoc : string
  - soLuong : int?
  - donGia : decimal(10,2)?
  - lieuDung : string?
  - ghiChu : string?
  --
  + themThuoc()
  + suaThuoc()
  + xoaThuoc()
}

TaiKhoan "1" -- "0..1" BacSi 
TaiKhoan "1" -- "0..1" BenhNhan 

ChuyenKhoa "0..1" -- "0..*" BacSi 
BacSi "0..1" -- "0..*" LichLamViecBacSi 
KhungGio "0..1" -- "0..*" LichLamViecBacSi 

BacSi "0..1" -- "0..*" DatLich 
BenhNhan "0..1" -- "0..*" DatLich 
HinhThucThanhToan "0..1" -- "0..*" DatLich 
LichLamViecBacSi "0..1" -- "0..*" DatLich 

DatLich "1" -- "0..*" GiaoDich 
DatLich "1" -- "0..1" DonThuoc 
DonThuoc "1" -- "0..*" ChiTietDonThuoc 



@enduml